# ct-fastapi-boilerplate

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
app/: config.py  main.py  schemas.py
